<resources>
    <string name="app_name">Sliver</string>
    <string name="logo_description">Sliver Logo</string>
    <string name="email_input">Email</string>
    <string name="confirm_email">Re-enter your Email</string>
    <string name="email_blank">Please enter an Email</string>
    <string name="confirm_password">Re-enter your Password</string>
    <string name="password_input">Password</string>
    <string name="phone_input">Please enter your phone number</string>
    <string name="verification_code">Please enter the verification code</string>
    <string name="verification_button">Send verification code</string>
    <string name="verify_button">Verify</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_button">Forgot password?</string>
    <string name="update_button">Update</string>
    <string name="not_have_account">Don\'t have an account? <u><b>Register</b></u></string>
    <string name="have_account">Already have an account? <u><b>Login</b></u></string>
    <string name="login_phone">Login with phone number</string>
    <string name="menu_findFriends">Find friends</string>
    <string name="menu_settings">Profile Settings</string>
    <string name="create_group">Create Group Chat</string>
    <string name="set_username">Set Username</string>
    <string name="set_status">Set Status</string>
    <string name="chat_hint">Type a messages…</string>
    <string name="menu_logout">Logout</string>
    <string name="send_button">Send Message</string>
    <string name="send_message_request">Send Friend Request</string>
    <string name="cancel_message_request">Cancel Friend request</string>
    <string name="find_friends_title">Find Friends</string>
    <string name="app_title">Sliver</string>
    <string name="default_username">Default username</string>
    <string name="default_user_status">Default user status</string>
    <string name="user_online_indicator">User online indicator</string>
    <string name="decline_message_request">Decline Friend Request</string>
    <string name="accept_message_request">Accept Friend Request</string>
    <string name="remove_contact">Remove this contact</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="request_sent">Request sent</string>
    <string name="request_user_status">%1$s sent you a friend request!</string>
    <string name="request_user_send_status">You sent a friend request to %1$s!</string>
    <string name="last_seen_status">Last seen: \n%1$s</string>
    <string name="placeholder_status">Offline</string>
    <string name="state_online">Online</string>
    <string name="send_file">Send File</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="delete_group">Delete this group</string>
    <string name="reset_password">Reset password</string>
    <string name="return_to_login">Return to <u><b>Login</b></u></string>
</resources>