<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".PhoneLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/logo_description"
        android:scaleType="center"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="17dp"
        android:hint="@string/phone_input"
        app:startIconDrawable="@drawable/phone_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verification_code_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_input"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="5dp"
        android:hint="@string/verification_code"
        android:visibility="gone"
        app:startIconDrawable="@drawable/padlock_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_verification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verification_code_input"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/verification_button"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_verification_button"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/verify_button"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/have_account_button_phone"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_button"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:text="@string/have_account"
        android:textAllCaps="false"
        android:textSize="11sp" />

</RelativeLayout>