<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo_description"
            android:scaleType="center"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/email_input"
            android:paddingHorizontal="5dp"
            app:startIconDrawable="@drawable/email_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/password_input"
            android:paddingHorizontal="5dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/padlock_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:text="@string/forgot_button"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/register_screen_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/not_have_account"
            android:textAllCaps="false"
            android:textSize="11sp" />

        <Button
            android:id="@+id/phone_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_screen_button"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/login_phone"
            android:textAllCaps="false"
            app:icon="@drawable/phone_24dp" />

    </RelativeLayout>

</ScrollView>