<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visit_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/default_avatar"
        app:civ_border_color="@color/purple_500"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/visit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_profile_image"
        android:layout_marginTop="10dp"
        android:text="@string/default_username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/visit_user_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_username"
        android:layout_marginTop="10dp"
        android:text="@string/default_user_status"
        android:textAlignment="center" />

    <Button
        android:id="@+id/send_message_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_user_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/send_message_request"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/decline_message_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_message_request_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/decline_message_request"
        android:textAllCaps="false"
        android:visibility="gone" />

</RelativeLayout>