<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordAcvitity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo_description"
            android:scaleType="center"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/email_input"
            android:paddingHorizontal="5dp"
            app:startIconDrawable="@drawable/email_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_password_email"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/reset_password"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/return_login_screen_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_password_button"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/return_to_login"
            android:textAllCaps="false"
            android:textSize="11sp" />
    </RelativeLayout>
</ScrollView>