<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:src="@drawable/default_avatar"
        app:civ_border_color="@color/purple_500"
        app:civ_border_width="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_username"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_online_status"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/user_online_indicator"
                android:src="@android:color/holo_green_dark"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/user_profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_user_status" />

    </LinearLayout>

</LinearLayout>